--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
     "dev": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "typecheck": "tsc"
   },
@@ -24,7 +23,6 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
-    "gh-pages": "^5.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
   }
